# dream-core

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: django.yml
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  signals.py  views.py
apps/accounts/fixtures/: initial_roles.json
apps/accounts/migrations/: 0001_initial.py
apps/accounts/urls/: accounts.py  auth.py
apps/audit/: admin.py  models.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/catalog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/core/: choices.py  hard_delete.py  models.py
apps/patients/: apps.py  fhir_utils.py  models.py  serializers.py  urls.py  views.py
apps/patients/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  settings.py  testing.py
docs/adr/: README.md  adr.md
dream_core/accounts/: accounts_utils.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
dream_core/accounts/migrations/: 0001_initial.py
dream_core/accounts/urls/: accounts.py  auth.py
dream_core/audit/: admin.py  apps.py  models.py  urls.py  views.py
dream_core/audit/middlewares/: facilities.py
dream_core/audit/migrations/: 0001_initial.py
dream_core/catalog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
dream_core/catalog/migrations/: 0001_initial.py  0002_labtestdefinition_panels_and_more.py  0002_remove_labtestdefinition_panel_and_more.py
dream_core/core/: choices.py  hard_delete.py  models.py
dream_core/facilities/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
dream_core/health_check/: views.py
dream_core/patients/: apps.py  fhir_utils.py  models.py  serializers.py  urls.py  views.py
tests/: conftest.py
tests/accounts/: factories.py  test_auth.py  test_rbac.py
tests/audit/: test_audit.py
tests/catalog/: factories.py  test_catalog.py
tests/core/: test_hard_delete_guard.py
tests/facilities/: factories.py  test_facilities.py  test_facilities_model.py  test_facility_api.py
tests/health_check/: test_health_check.py
tests/patients/: factories.py  test_patient_api.py  test_patient_crud.py  test_soft_delete_model.py
(+10 files in other folders)
